syntax = "proto3";

package chunk;
option go_package = "github.com/pachyderm/pachyderm/v2/src/internal/storage/chunk";

// DataRef is a reference to data within a chunk.
message DataRef {
  // The chunk the referenced data is located in.
  Ref ref = 1;
  // The hash of the data being referenced.
  bytes hash = 2;
  // The offset and size used for accessing the data within the chunk.
  int64 offset_bytes = 3;
  int64 size_bytes = 4;
}

enum CompressionAlgo {
  NONE = 0;
  GZIP_BEST_SPEED = 1;  
}

enum EncryptionAlgo {
  ENCRYPTION_ALGO_UNKNOWN = 0;
  CHACHA20 = 1;
}

message Ref {
  bytes id = 1;
  int64 size_bytes = 2;
  bool edge = 3;

  bytes dek = 4;
  EncryptionAlgo encryption_algo = 5;
  CompressionAlgo compression_algo = 6;
}
